Fixed the major bug of the cards in the HorizontalScrollbar component

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
   }
   
   .hero-banner-img {
-    position: absolute;
+    position: relative;
     right: 40px;
     top: 0px;
     width: 700px;
